@@ -305,34 +305,29 @@ If you need to boot into single user mode, change options to
 <h3>OpenBSD/sgi:</h3>
 
 <a href="http://www.openbsd.org/sgi.html">OpenBSD/sgi</a>
-can (almost) run in GXemul on an emulated O2 (SGI-IP32) with root on nfs.
+can almost run in GXemul on an emulated O2 (SGI-IP32) with root on NFS.
+It is possible to barely boot up the system and log in, but many
+operations (such as trying to compile GXemul within the emulated
+OpenBSD OS) trigger bugs in the emulator, so it is <font color="#ff0000"><i>not considered
+stable yet</i></font>.
 
 <p>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="20050617-openbsd-sgi.png"><img src="20050617-openbsd-sgi_small.png"></a>
+&nbsp;&nbsp;
+<a href="20181018-openbsd-sgi-o2.png"><img src="20181018-openbsd-sgi-o2-small.png"></a>
 
-<p><font color="#ff0000">NOTE: I haven't succeeded all the way with
-this yet, and this shows/triggers many bugs in the emulator, but some of
-it works.</font>
-
-<p>GXemul does not yet emulate the AHC PCI SCSI controller in the O2. (I have 
-mailed Adaptec several times, asking for documentation, but never received 
-any reply.) OpenBSD/sgi can still run in the emulator, as long as it doesn't
-use SCSI. For a simple test with the ramdisk (install) kernel, try dowloading<pre>
-	<a href="ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/">ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi</a>/<a href="ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/bsd.rd">bsd.rd</a>
-
-</pre>and run <b><tt>gxemul -xeo2 bsd.rd</tt></b>.
-
-<p>It might also be possible to netboot. Another emulated machine must 
-then be used as the nfs root server, and the emulated O2 machine must boot 
+<p>GXemul does not yet emulate the AHC PCI SCSI controller in the O2,
+so it needs to boot via the emulated network.
+Another emulated machine must then be used as the nfs root server, and the emulated O2 machine must boot 
 as a <a href="http://www.openbsd.org/cgi-bin/man.cgi?query=diskless&amp;manpath=OpenBSD+Current&amp;format=html">diskless</a>
 client. Performing this setup is quite time consuming, but necessary:
 
 <p>
 <ol>
   <li>First of all, the "<tt>nfs server</tt>" machine must be set up.
-	This needs to have a 800 MB <tt>/tftpboot</tt> partition.
-	<a href="#netbsdpmaxinstall">Install NetBSD/pmax 3.1 from CDROM</a>.
+	This needs to have a 1500 MB <tt>/tftpboot</tt> partition.
+	<a href="#netbsdpmaxinstall">Install NetBSD/pmax 8.0 from CDROM</a>.
 	(Don't forget to add the extra partition!)
   <p>
   <li>Configure the nfs server machine to act as an nfs server.
@@ -355,25 +350,54 @@ echo "10:20:30:00:00:10 client" &gt; /etc/ethers
 echo 10.0.0.1 client &gt; /etc/hosts
 reboot</b>
 </pre></td></tr></table>
-  <li>Start the DECstation emulation again, and enter the following
-	commands to download the OpenBSD/sgi distribution:<br>(NOTE: This
-	takes quite some time, even if you have a fast network connection.)
+  <li>On the host, download the OpenBSD distribution:
+<p><table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/base63.tgz
+wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/comp63.tgz
+wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xbase63.tgz
+wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xfont63.tgz
+wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xserv63.tgz
+wget http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/xshare63.tgz
+gunzip base63.tgz
+gunzip comp63.tgz
+gunzip xbase63.tgz
+gunzip xfont63.tgz
+gunzip xserv63.tgz
+gunzip xshare63.tgz
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> base63.tar
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> comp63.tar
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xbase63.tar
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xfont63.tar
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xserv63.tar
+dd if=/dev/zero of=/dev/stdout bs=65536 count=1 >> xshare63.tar
+</pre></td></tr></table>
+  <li>Start the DECstation emulation again using this command line:
+<p><table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>gxemul -xe 3max -d nbsd_pmax.img -d base63.tar -d comp63.tar -d xbase63.tar -d xfont63.tar -d xserv63.tar -d xshare63.tar
+</pre></td></tr></table>
+and enter the following commands to extract the OpenBSD distribution:
 <table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<b>cd /tftpboot; ftp -i ftp.se.openbsd.org</b>
-(log in as anonymous...)
-<b>cd pub/OpenBSD/4.0/sgi
-mget b*tgz c*tgz e* g* m*
-quit
-sh
-for a in *.tgz; do echo $a; tar zxfp $a; done
-echo 10.0.0.2:/tftpboot / nfs rw 0 0 &gt; /tftpboot/etc/fstab
-rm *.tgz
-dd if=/dev/zero of=swap bs=1024 count=32768
+<b>cd /tftpboot
+tar xf /dev/sd1c
+tar xf /dev/sd2c
+tar xf /dev/sd3c
+tar xf /dev/sd4c
+tar xf /dev/sd5c
+tar xf /dev/sd6c
+
+tar zxfv var/sysmerge/etc.tgz
+tar zxfv var/sysmerge/xetc.tgz
+
+dd if=/dev/zero of=swap bs=1024 count=131072
+
+echo inet 10.0.0.1 > /tftpboot/etc/hostname.mec0
+echo nameserver 10.0.0.254 > /tftpboot/etc/resolv.conf
+echo 10.0.0.2:/tftpboot / nfs rw 0 0 > /tftpboot/etc/fstab
+echo 10.0.0.2:/tftpboot/swap none swap sw,nfsmntpt=/swap >> /tftpboot/etc/fstab
+
 halt</b>
 </pre></td></tr></table>
   <li>Download the OpenBSD/sgi GENERIC and RAMDISK kernels:<pre>
-	<a href="ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/bsd">ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/bsd</a>
-	<a href="ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/bsd.rd">ftp://ftp.se.openbsd.org/pub/OpenBSD/4.0/sgi/bsd.rd</a>
+	<a href="http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.IP32">http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.IP32</a>
+	<a href="http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.rd.IP32">http://ftp.openbsd.org/pub/OpenBSD/6.3/sgi/bsd.rd.IP32</a>
 
 </pre>
   <li>Create a configuration file called <tt>config_client</tt>:
@@ -394,9 +418,10 @@ machine(
 
         type("sgi")
         subtype("o2")
+	use_x11(1)
 
-        </b>! load("bsd")<b>
-        load("bsd.rd")
+        </b>! load("bsd.rd.IP32")<b>
+        load("bsd.IP32")
 )
 </b>
 </pre></td></tr></table>
@@ -428,13 +453,7 @@ machine(
 	<b>gxemul @config_client</b>
 
 </pre>
-  <li>In the OpenBSD/sgi window, choose "<tt>s</tt>" (for Shell), and type:
-<table border="0"><tr><td><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td><pre>
-<b>ifconfig mec0 10.0.0.1; route add default 10.0.0.254
-mount -v 10.0.0.2:/tftpboot /mnt
-cd /mnt/dev; ./MAKEDEV all; cd /; umount /mnt
-halt</b>
-</pre></td></tr></table>
+  <li>Optionally:
 	You might want to log in as <tt>root</tt> on the server machine, and
 	run <tt>tcpdump -lnvv</tt> or similar, to see that what the client
 	machine actually does on the network. The <tt>MAKEDEV</tt> script
@@ -442,30 +461,9 @@ halt</b>
 </ol>
 
 
-<p><font color="#ff0000">NOTE: Everything up to this point should work. 
-However, the next step (in gray) doesn't actually work:</font>
-
-<p><font color="#888888">Once everything has been set up correctly, change
-<tt>bsd.rd</tt> in <tt>config_client</tt> to just <tt>bsd</tt> (the GENERIC
-kernel). It should now be possible to boot OpenBSD/sgi using the NetBSD/pmax 
-nfs server. (When asked for "<tt>root device :</tt>" on the OpenBSD machine, 
-enter <tt><b>mec0</b></tt>.)</font>
-
-<p><font color="#ff0000">But it doesn't work. Probably because GXemul's
-implementation of the mec (ethernet card used in the O2) is too much of
-a quick hack. For now, use the <tt>bsd.rd</tt> kernel, and (at every
-boot) type:</font><pre>
-	<b>s</b>  (for Shell)
-	<b>ifconfig mec0 10.0.0.1; route add default 10.0.0.254</b>
-	<b>mount -v 10.0.0.2:/tftpboot /mnt</b>
-	<b>cd /mnt; usr/sbin/chroot .</b>
-	<b>sh etc/rc</b>
-</pre>
-
-<p><font color="#ff0000">This will not cause OpenBSD to be booted 
-normally, but at least a few basic things will work.
-By the way, the emulator performs so poorly, that you will have time to 
-fetch several cups of coffee for each of the steps above.</font>
+<p><font color="#ff0000">Note that while this may appear to work,
+the OS is quite unstable, and many things such as compiling GXemul
+inside the emulated OS will trigger bugs.</font>
 
 
 
